# Zileo-Chat

./: .git-blame-ignore-revs  .gitignore  .prettierignore  .prettierrc.json  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  NOTICE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: constants.rs  lib.rs  main.rs  state.rs  test_utils.rs
src-tauri/src/agents/: error.rs  llm_agent.rs  mod.rs  prompt.rs  simple_agent.rs
src-tauri/src/agents/core/: agent.rs  orchestrator.rs  registry.rs
src-tauri/src/agents/execution/: completion.rs  iteration.rs  mod.rs  reasoning.rs  sequence_tracker.rs  tool_loop.rs  tools.rs
src-tauri/src/commands/: agent.rs  custom_provider.rs  embedding.rs  error.rs  file_manager.rs  import_export.rs  llm.rs  llm_models.rs  mcp.rs  memory.rs  memory_tests.rs  message.rs  migration.rs  mod.rs  prompt.rs  prompt_tests.rs  security.rs  skill.rs  streaming.rs  sub_agent_execution.rs  task.rs  task_tests.rs  thinking.rs  tool_execution.rs  user_question.rs  validation.rs  validation_audit.rs  validation_audit_tests.rs  workflow.rs  workflow_folder.rs  workflow_tests.rs
src-tauri/src/commands/agent/: mod.rs  tests.rs  validation.rs
src-tauri/src/commands/embedding/: config.rs  mod.rs  operations.rs  stats.rs
src-tauri/src/commands/import_export/: export.rs  helpers.rs  import.rs  import_ops.rs  mod.rs
src-tauri/src/commands/llm_models/: connection.rs  crud.rs  mod.rs  provider_settings.rs  seed.rs  tests.rs
src-tauri/src/db/: client.rs  mod.rs  persistence.rs  queries.rs  schema.rs  utils.rs
src-tauri/src/llm/: cache_control.rs  circuit_breaker.rs  embedding.rs  http.rs  manager.rs  mistral.rs  mod.rs  ollama.rs  openai_compatible.rs  pricing.rs  provider.rs  retry.rs  sse.rs  tool_adapter.rs  tool_format.rs  utils.rs
src-tauri/src/mcp/: circuit_breaker.rs  client.rs  error.rs  helpers.rs  http_auth.rs  http_handle.rs  manager.rs  mod.rs  protocol.rs  redact.rs  secrets.rs  server_handle.rs
src-tauri/src/models/: agent.rs  chat_block.rs  custom_provider.rs  embedding.rs  function_calling.rs  import_export.rs  llm_models.rs  mcp.rs  memory.rs  message.rs  mod.rs  prompt.rs  serde_utils.rs  skill.rs  streaming.rs  sub_agent.rs  task.rs  thinking_step.rs  tool_execution.rs  user_question.rs  validation.rs  workflow.rs  workflow_folder.rs
src-tauri/src/security/: keystore.rs  mod.rs  validation.rs
src-tauri/src/tools/: constants.rs  context.rs  context_tests.rs  delegate_task.rs  delegate_task_execution.rs  delegate_task_tests.rs  description_builder.rs  description_builder_tests.rs  factory.rs  factory_creation.rs  factory_tests.rs  mod.rs  parallel_tasks.rs  parallel_tasks_execution.rs  parallel_tasks_tests.rs  read_skill.rs  read_skill_tests.rs  registry.rs  response.rs  spawn_agent.rs  spawn_agent_execution.rs  spawn_agent_tests.rs  sub_agent_circuit_breaker.rs  sub_agent_circuit_breaker_tests.rs  sub_agent_executor.rs  task_bridge.rs  utils.rs  utils_tests.rs  validation_helper.rs  validation_helper_requests.rs  validation_helper_tests.rs
src-tauri/tests/: memory_tool_integration.rs  sub_agent_tools_integration.rs
(+391 files in other folders)
