[package]
name = "zileo-chat"
version = "0.23.2"
edition = "2021"
license = "Apache-2.0"
authors = ["Assistance Micro Design <assistance-micro-design@pm.me>"]
description = "Zileo Chat - Multi-agent AI desktop application"
homepage = "https://www.assistancemicrodesign.net/"
repository = "https://github.com/assistance-micro-design/zileo-chat"
readme = "../README.md"
keywords = ["ai", "chat", "multi-agent", "llm", "tauri"]
categories = ["development-tools", "gui"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
# OPT-9: Use specific tokio features instead of "full" for faster compilation
tokio = { version = "1.51.1", features = [
    "rt",           # Runtime core
    "rt-multi-thread", # Multi-threaded runtime
    "macros",       # #[tokio::main], #[tokio::test]
    "sync",         # Synchronization primitives (Mutex, RwLock, channels)
    "time",         # Time utilities (sleep, timeout, interval)
    "fs",           # Async filesystem operations
    "io-util",      # Async I/O utilities
    "net",          # TCP/UDP networking
    "process",      # Async process spawning (for MCP stdio)
] }
# SA-006 DEP-2: Pruned unused features (protocol-http, protocol-ws, rustls)
# Only kv-rocksdb is needed for embedded storage (Surreal::new::<RocksDb>)
surrealdb = { version = "~2.6", default-features = false, features = ["kv-rocksdb"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1.20", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
async-trait = "0.1"
regex = "1.10"
globset = "0.4"
# Used to add jitter to retry backoff and avoid thundering-herd on transient LLM errors.
rand = "0.8"

# Async utilities for cancellation tokens
tokio-util = { version = "0.7", features = ["rt"] }

# LLM Integration (Rig.rs)
rig-core = "0.34.0"

# HTTP client for provider connectivity tests and MCP HTTP transport
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

# Async stream utilities for SSE (OPT-WF-4: Lock version)
futures-util = "0.3.31"

# Tauri Secure Storage
# Platform-native credential stores (no default features - must be explicit)
keyring = { version = "3.6", features = [
    "apple-native",           # macOS/iOS Keychain
    "windows-native",         # Windows Credential Manager
    "sync-secret-service",    # Linux Secret Service (Gnome Keyring/KWallet)
] }
aes-gcm = "0.10"
base64 = "0.22"

[dev-dependencies]
tempfile = "3.24"
# Used by llm::sse tests to forge a `reqwest::Response` from an in-memory
# body without touching the network. Pinned to the same major as the version
# transitively required by `reqwest` 0.12 to avoid duplicate copies.
http = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Production build optimizations (OPT-DB-4)
[profile.release]
lto = true
strip = true
opt-level = 3
panic = "abort"
codegen-units = 1
